Added inline comments

--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -6,8 +6,11 @@
 <body>
   <div class="background">
     <%- include ('partials/navbar') %>
+    <!-- Title -->
     <div class="container p-5">
       <h1 class="title">Projects</h1>
+
+    <!-- Project table-->
       <div class="container mt-5"  style="max-width: 600px; margin-left:0;">
         <div class="row">
           <div class="col-sm d-flex flex-wrap align-items-center">
