--- a/views/services.ejs
+++ b/views/services.ejs
@@ -7,11 +7,13 @@
   <div class="background">
     <%- include ('partials/navbar') %>
     <div class="container p-5">
+      <!-- Title -->
       <h1 class="title">Services</h1>
       <div class="container mt-5" style="max-width:500px;margin-left: 0;">
         <div class="textbox-content-service">General Programming in programming languages like Python, JavaScript, Java, C++. I can help clients with coding tasks, bug fixing, or developing small-scale applications.</div>
       </div>
 
+      <!-- language logos -->
       <div class="container mt-5"  style="max-width: 600px; margin-left:auto;">
         <div class="row p-1">
           <div class="col-sm p-1">
