--- a/views/about.ejs
+++ b/views/about.ejs
@@ -7,6 +7,7 @@
   <div class="background">
     <%- include ('partials/navbar') %>
     <div class="container-lg p-5">
+      <!-- Title -->
         <img id="mugshot" src="/images/linkedin.png">
         <p class="title title-impt">Man Hin Tse</p>
         
