--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -8,7 +8,7 @@
     <%- include ('partials/navbar') %>
     <div class="container p-5">
       <h1 class="title">Contact</h1>
-
+      <!-- Info panel-->
       <div class="container contact p-3">
         <p class="">Daniel Tse</p>
         <br>
@@ -17,6 +17,7 @@
         </a>
       </div>
       
+      <!-- Contact form-->
       <form action="/" style="max-width: 500px">
         <div class="row mt-5 mb-3">
           <div class="col">
